my-app/src/components/MainSwitch/MainSwitch.css
.main-switch {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 40px;
  margin-bottom: 25px;
}

.main-sort {
  position: relative;
  display: flex;
  height: 100%;
  width: fit-content;
  align-items: center;
  gap: 10px;
}
    
.main-sort__switcher {
  position: absolute;
  display: flex;
  flex-direction: column;
  top: 100%;
  min-width: 150px;
  max-width: 300px;
  max-height: 200px;
  padding: 10px;
  justify-content: space-around;
  gap: 10px;
  border: 1px solid rgba(0,0,0,.08);
  border-radius: 8px;
  background: #fff;
  box-shadow: 0 8px 12px 0 rgb(0 0 0 / 16%);
}

